--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Ranga Store</title>
+  <title>Sohag's Store</title>
+  <!-- css -->
   <link rel="stylesheet" href="./css/style.css" />
+
   <!-- Latest compiled and minified CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
@@ -15,9 +17,13 @@
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500&display=swap" rel="stylesheet" />
+
+  <!-- fontawesome -->
+  <script src="https://kit.fontawesome.com/301f593a0f.js" crossorigin="anonymous"></script>
 </head>
 
 <body class="container">
+  <!-- header section  -->
   <header class="">
     <div class="input-group mt-5 mb-3 w-50 mx-auto">
       <input type="text" class="form-control" placeholder="Search Product" aria-label="Recipient's username"
@@ -25,15 +31,15 @@
       <button class="btn btn-primary" type="button" id="button-addon2">Search</button>
     </div>
   </header>
+  <!-- main section  -->
   <main class="main">
-
     <div class="row">
       <div class="col-md-9 col-lg-9 col-sm-7">
         <div id="all-products" class="">
-
-
+          <!-- all product load here  -->
         </div>
       </div>
+      <!-- My cart Section  -->
       <div class="col-md-3 col-lg-3 col-sm-5 cart-main">
         <div class="cart" id="my-cart">
           <table class="table">
@@ -74,9 +80,11 @@
   </main>
   <footer></footer>
 
+  <!-- bootstrap script  -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ"
     crossorigin="anonymous"></script>
+
   <!-- add javascript  file  -->
   <script src="js/app.js"></script>
 </body>
