--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
 <body class="container">
   <!-- header section  -->
   <header class="">
-    <div class="input-group mt-5 mb-3 w-50 mx-auto">
+    <h1 class="text-center">Welcome To <span class="text-rating">Sohag's Store</span></h1>
+    <div class="input-group mt-3 mb-3 w-50 mx-auto">
       <input type="text" class="form-control" placeholder="Search Product" aria-label="Recipient's username"
         aria-describedby="button-addon2">
       <button class="btn btn-primary" type="button" id="button-addon2">Search</button>
